web-infras/parser/tests/fixtures/babel/es2015/object/invalid-property-initializer/output.txt
[SyntaxError]: Invalid shorthand property initializer (2,3)
2|  foo = 123,
 | ^
